--- a/BookStore/BookStore/Storyboards/Base.lproj/Main.storyboard
+++ b/BookStore/BookStore/Storyboards/Base.lproj/Main.storyboard
@@ -61,6 +61,9 @@
                                         <constraint firstItem="YVW-Zj-5ak" firstAttribute="leading" secondItem="STT-NO-QOU" secondAttribute="leading" constant="2" id="w0P-x9-ngM"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="9Ql-oJ-7NB" kind="show" id="1C3-zg-OpY"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -85,13 +88,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tell us about this book..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DA9-bw-j8s">
-                                <rect key="frame" x="8" y="52" width="398" height="30"/>
+                                <rect key="frame" x="8" y="96" width="398" height="30"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Jq7-YQ-7vu">
-                                <rect key="frame" x="157" y="103" width="100" height="97.5"/>
+                                <rect key="frame" x="157" y="147" width="100" height="97.5"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Jq7-YQ-7vu" secondAttribute="height" multiplier="1:1" id="Kdh-T6-2Sy"/>
@@ -99,7 +102,7 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="xUr-Z7-D8Z">
-                                <rect key="frame" x="10" y="212" width="394" height="76"/>
+                                <rect key="frame" x="10" y="256" width="394" height="76"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kOt-LT-7Oo">
                                         <rect key="frame" x="0.0" y="0.0" width="394" height="34"/>
@@ -124,7 +127,7 @@
                                 </subviews>
                             </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="yzE-NS-XTD">
-                                <rect key="frame" x="10" y="292" width="394" height="459"/>
+                                <rect key="frame" x="10" y="336" width="394" height="415"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" systemColor="labelColor"/>
@@ -141,6 +144,9 @@
                                 <buttonConfiguration key="configuration" style="plain" title="Button">
                                     <color key="baseForegroundColor" systemColor="labelColor"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="clearButtonTapped:" destination="9Ql-oJ-7NB" eventType="touchUpInside" id="9ce-Kr-iMN"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="rxm-5z-2ae"/>
@@ -164,10 +170,27 @@
                             <constraint firstItem="rxm-5z-2ae" firstAttribute="trailing" secondItem="DA9-bw-j8s" secondAttribute="trailing" constant="8" id="x0H-CX-gad"/>
                         </constraints>
                     </view>
-                    <toolbarItems>
-                        <barButtonItem title="Item" id="ti1-i6-Q6X"/>
-                    </toolbarItems>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="ryG-5J-A6H">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="sRu-Jj-pdh">
+                            <connections>
+                                <action selector="saveButtonTapped:" destination="9Ql-oJ-7NB" id="0PR-JR-5vR"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="authorTextField" destination="Imi-f7-pSq" id="GN5-Oc-1Us"/>
+                        <outlet property="bookAuthorTextField" destination="Imi-f7-pSq" id="0su-lq-7G8"/>
+                        <outlet property="bookPhoto" destination="Jq7-YQ-7vu" id="MmP-sq-n3f"/>
+                        <outlet property="bookRatingTextField" destination="CgS-h0-xa8" id="5as-SR-4lS"/>
+                        <outlet property="bookTitleTextField" destination="kOt-LT-7Oo" id="2MY-cB-DRZ"/>
+                        <outlet property="clearButton" destination="agN-Ak-h0i" id="nKM-km-H2d"/>
+                        <outlet property="enterTitleTextField" destination="kOt-LT-7Oo" id="90d-TU-HE8"/>
+                        <outlet property="introLabel" destination="DA9-bw-j8s" id="qPy-Y8-trZ"/>
+                        <outlet property="ratingTextField" destination="CgS-h0-xa8" id="Kx6-cZ-eX8"/>
+                        <outlet property="titleTextField" destination="kOt-LT-7Oo" id="tD8-lv-W9S"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pO5-S3-z6f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
